--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,30 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    
+
+    # Step to copy package.json to the target directory
+    - name: Copy package.json to target directory
+      run: |
+        cp .github/workflows/package.json /home/runner/work/migration/migration/
+
+    # Verify the copy by listing files in the target directory
+    - name: List files in the target directory
+      run: ls -alh /home/runner/work/migration/migration/
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '14'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd /home/runner/work/migration/migration/
+        npm install
 
     - name: Run tests
-      run: npm test
+      run: |
+        cd /home/runner/work/migration/migration/
+        npm test
+
+    - name: Use secret in a step
+      run: echo "Using secret API_KEY: ${{ secrets.API_KEY }}"
